# semantic-news

./: .env.example  .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.txt
.devin/: wiki.json
semanticnews/: __init__.py  asgi.py  celery.py  context_processors.py  openai.py  prompting.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
semanticnews/agenda/: admin.py  api.py  apps.py  forms.py  localities.py  models.py  tests.py  views.py
semanticnews/agenda/migrations/: 0000_vector_extension.py  0001_initial.py  0002_alter_entry_options_entry_previous_version.py  0002_source_domain.py  0003_alter_source_domain.py  0003_rename_name_entry_title.py  0004_event_locality_settings.py  0004_remove_entry_contents_alter_entry_options_and_more.py  0005_entry_description_entry_source.py  0006_entry_unique_entry_title_date.py  0007_rename_entry_event.py  0008_event_confidence.py  0009_alter_event_options.py  0010_category_locality_event_category_event_locality.py  0011_alter_category_options_alter_locality_options_and_more.py  0012_event_status.py  0013_event_significance.py  0014_alter_event_significance.py  0015_locality_is_default.py  0016_source_remove_event_source_event_sources.py  0017_remove_event_description.py
semanticnews/annotations/images/: apps.py  models.py
semanticnews/annotations/recaps/: apps.py  models.py
semanticnews/contents/: admin.py  apps.py  models.py  registry.py  services.py
semanticnews/contents/migrations/: 0001_initial.py  0002_contententry_content_entries_and_more.py  0002_initial.py  0002_remove_contentevent_pinned_remove_contentevent_rank.py  0003_alter_content_created_at.py  0004_rename_contententry_contentevent_and_more.py  0005_delete_mcpserver.py
semanticnews/contents/templatetags/: custom_filters.py  markdown_extras.py
semanticnews/entities/: admin.py  apps.py  models.py
semanticnews/entities/migrations/: 0001_initial.py
semanticnews/incidents/: apps.py  models.py
semanticnews/keywords/: admin.py  apps.py  models.py
semanticnews/keywords/migrations/: 0001_initial.py
semanticnews/opinions/: agents.py  apps.py  models.py
semanticnews/profiles/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
semanticnews/profiles/migrations/: 0001_initial.py  0002_initial.py  0002_userreference.py
semanticnews/references/: admin.py  api.py  apps.py  models.py  tasks.py
semanticnews/references/migrations/: 0001_initial.py
semanticnews/settings/: base.py
semanticnews/templates/: base.html  home.html  search_results.html
semanticnews/templatetags/: language_tags.py
semanticnews/topics/: admin.py  agents.py  api.py  apps.py  layouts.py  models.py  publishing.py  signals.py  tasks.py  test_api_suggest_topics.py  tests.py  tests_markdown.py  tests_widgets_api.py  tests_widgets_execution.py  utils.py  views.py
semanticnews/users/: admin.py  apps.py  models.py  views.py
semanticnews/widgets/: WIDGETS.md  admin.py  api.py  apps.py  defaults.py  helpers.py  models.py  rendering.py  services.py  tasks.py  tests.py
specs/: idea.md  prd.md  stack.md
static/agenda/: event_modal.js  event_suggestions.js
static/topics/: topic_events.js  topic_publish.js  topic_recap.js
(+472 files in other folders)
